--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/rttomlinson/assignment_secrets#readme",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
     "mongoose": "^4.9.6",
     "mongoose-unique-validator": "^1.0.5"
   }
