--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
+    "express-flash-messages": "^0.1.1",
     "express-handlebars": "^3.0.0",
+    "md5": "^2.2.1",
     "mongoose": "^4.9.6",
     "mongoose-unique-validator": "^1.0.5"
   }
