--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "assignment_secrets",
-  "version": "1.0.0",
-  "description": "Build a web app that allows users to store and share their darkest secrets.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rttomlinson/assignment_secrets.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rttomlinson/assignment_secrets/issues"
-  },
-  "homepage": "https://github.com/rttomlinson/assignment_secrets#readme",
-  "dependencies": {
-    "bcrypt": "^1.0.2",
-    "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
-    "express-flash-messages": "^0.1.1",
-    "express-handlebars": "^3.0.0",
-    "md5": "^2.2.1",
-    "mongoose": "^4.9.6",
-    "mongoose-unique-validator": "^1.0.5"
-  }
+    "name": "assignment_secrets",
+    "version": "1.0.0",
+    "description": "Build a web app that allows users to store and share their darkest secrets.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start-dev": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rttomlinson/assignment_secrets.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/rttomlinson/assignment_secrets/issues"
+    },
+    "homepage": "https://github.com/rttomlinson/assignment_secrets#readme",
+    "dependencies": {
+        "bcrypt": "^1.0.2",
+        "body-parser": "^1.17.1",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.15.2",
+        "express-flash-messages": "^0.1.1",
+        "express-handlebars": "^3.0.0",
+        "md5": "^2.2.1",
+        "mongoose": "^4.9.6",
+        "mongoose-unique-validator": "^1.0.5"
+    }
 }
